Take what the first pass left where it fell
The schema listed the keys a point nobody is owed a row at may not have,
and `writableBecause` went in beside them without being added to it. Six
of the seven fields of the owed side were forbidden there and the seventh
was not, so a document could name grounds for a point that owes no row —
which the writer never does and the description says cannot happen.

The rest is prose and spelling. The compact constructor branched on the
set being empty, which was working around `EnumSet.copyOf` refusing an
empty collection rather than saying anything; building the set and adding
to it has no case to make. `of` claimed to be the only way one of these
is made, which the canonical constructor of a public record is not. The
type's own javadoc still said what is proven about a value comes from the
rules or from a value that went through the decoder, and the `or` there
is the exclusivity this change took out.